--- a/travis.yml
+++ b/travis.yml
@@ -14,6 +14,22 @@ cache:
 
 script: "./gradlew clean build"
 
+before_deploy:
+    - zip -r webservice *
+    - mkdir -p deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
+    - mv webservice.zip deploy/webservice.zip # deploy로 zip파일 이동
+
+deploy:
+    - provider: s3
+      access_key_id: AKIAQO67RKCC7XBHYR7M
+      secret_access_key: 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
+      bucket: freeelec-springboot-build # S3 버킷
+      region: ap-northeast-2
+      skip_cleanup: true
+      acl: private # zip 파일 접근을 private으로
+      local_dir: deploy # before_deploy에서 생성한 디렉토리
+      wait-until-deployed: true
+
 
 # CI 실행 완료시 메일로 알람
 notifications:
