--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ before_deploy:
     - mkdir -p deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성
     - mv webservice.zip deploy/webservice.zip # deploy로 zip파일 이동
 
+before_install:
+  chmod +x gradlew
+
 deploy:
     - provider: s3
       access_key_id: AKIAQO67RKCC7XBHYR7M
