--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,16 @@ deploy:
       local_dir: deploy # before_deploy에서 생성한 디렉토리
       wait-until-deployed: true
 
+    - provider: codedeploy
+        access_key_id: AKIAQO67RKCC7XBHYR7M
+        secret_access_key: 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
+        bucket: freelec-springboot-build # S3 버킷
+        key: webservice.zip # 빌드 파일을 압축해서 전달
+        bundle_type: zip
+        application: freelec-springboot2-webservice # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+        deployment_group: freelec-springboot2-webservice-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+        region: ap-northeast-2
+        wait-until-deployed: true
 
 # CI 실행 완료시 메일로 알람
 notifications:
